# StringArt

./: CMakeLists.txt  README.md
include/: Image.h  InputImage.h  OutputImage.h  Parameters.h  StringArt.h
src/: Image.cpp  InputImage.cpp  OutputImage.cpp  StringArt.cpp  defaultLayout.ini  main.cpp
